asm_tests/other_testfiles/invalid_files/error10.s
.name "MORO"
.comment "MORJESTA!"

fork r1
